--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="dark-theme">
     <div class="container">
         <h1 class="text-center my-4">Mandelbrot Set Visualizer</h1>
         <div class="row">
