Set up webpack build

--- a/Index.html
+++ b/Index.html
@@ -47,6 +47,7 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <!-- Load the bundled script from the dist directory -->
+    <script src="dist/Script.js"></script>
 </body>
 </html>
