--- a/Index.html
+++ b/Index.html
@@ -42,6 +42,7 @@
                         <button class="btn btn-info btn-block" id="toggleJuliaButton">Toggle Julia Mode</button>
                         <button class="btn btn-warning btn-block" id="fullScreenButton">Toggle Full-Screen</button>
                         <button class="btn btn-dark btn-block" id="darkModeButton">Toggle Dark/Light Mode</button>
+                        <button class="btn btn-success btn-block" id="saveButton">Save PNG</button>
                     </div>
                 </div>
             </div>
