Add HSV color scheme

--- a/Index.html
+++ b/Index.html
@@ -29,6 +29,7 @@
                             <option value="cool">Cool</option>
                             <option value="fire">Fire</option>
                             <option value="ocean">Ocean</option>
+                            <option value="hsv">HSV</option>
                         </select>
                         <div class="form-check mt-2">
                             <input class="form-check-input" type="checkbox" id="invertColors">
