--- a/Index.html
+++ b/Index.html
@@ -22,6 +22,10 @@
                         <input type="range" class="custom-range" id="iterations" min="1" max="1000" value="200">
                     </div>
                     <div class="form-group">
+                        <label for="zoom">Zoom:</label>
+                        <input type="range" class="custom-range" id="zoom" min="1" max="10" step="0.1" value="1">
+                    </div>
+                    <div class="form-group">
                         <label for="colorScheme">Color Scheme:</label>
                         <select class="form-control" id="colorScheme">
                             <option value="monochrome">Monochrome</option>
