--- a/Index.html
+++ b/Index.html
@@ -30,12 +30,20 @@
                             <option value="fire">Fire</option>
                             <option value="ocean">Ocean</option>
                         </select>
-                        <div class="form-check mt-2">
-                            <input class="form-check-input" type="checkbox" id="invertColors">
-                            <label class="form-check-label" for="invertColors">Invert Colors</label>
-                        </div>
+                    <div class="form-check mt-2">
+                        <input class="form-check-input" type="checkbox" id="invertColors">
+                        <label class="form-check-label" for="invertColors">Invert Colors</label>
                     </div>
-                    <div class="button-group mt-3">
+                </div>
+                <div class="form-group">
+                    <label for="juliaCX">Julia C.x:</label>
+                    <input type="number" step="0.01" class="form-control" id="juliaCX" value="-0.7">
+                </div>
+                <div class="form-group">
+                    <label for="juliaCY">Julia C.y:</label>
+                    <input type="number" step="0.01" class="form-control" id="juliaCY" value="0.27015">
+                </div>
+                <div class="button-group mt-3">
                         <button class="btn btn-primary btn-block" id="startAnimation">Start Animation</button>
                         <button class="btn btn-secondary btn-block" id="stopAnimation">Stop Animation</button>
                         <button class="btn btn-danger btn-block" id="reset">Reset</button>
